classDiagram
    class MaintenanceStrategy {
      <<interface>>
      +calculate(...)
    }
    class MileageMaintenanceStrategy
    class TimeMaintenanceStrategy
    class CombinedMaintenanceStrategy
    class MaintenanceCalculator

    MaintenanceStrategy <|.. MileageMaintenanceStrategy
    MaintenanceStrategy <|.. TimeMaintenanceStrategy
    MaintenanceStrategy <|.. CombinedMaintenanceStrategy
    MaintenanceCalculator --> MaintenanceStrategy

    class CatalogController
    class CatalogService
    class CatalogRepository {
      <<interface>>
    }
    class JpaCatalogRepository

    CatalogController --> CatalogService
    CatalogService --> CatalogRepository
    CatalogRepository <|.. JpaCatalogRepository
